# probabilistic-timed-automata

./: .buildinfo  .gitignore  .travis.yml  Makefile  README.md  README.rst  bibliography.html  genindex.html  index.html  modules.html  objects.inv  pta.html  pta_examples.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.ctags.d/: exclusions.ctags
.github/workflows/: deploy.yml  docs.yml  unit-tests.yml
_modules/: index.html  pta.html
_modules/portion/: interval.html
_modules/pta/: clock.html  distributions.html  pta.html
_sources/: index.rst.txt
_sources/pta/: mdp.rst.txt
doc/pta/: clocks.html  distributions.html  pta.html  region.html
docs/: .buildinfo  Makefile  bibliography.html  bibliography.rst  clocks.html  conf.py  distributions.html  genindex.html  index.html  index.rst  modules.html  modules.rst  objects.inv  pta.html  pta.rst  pta_examples.html  py-modindex.html  region.html  search.html  searchindex.js
docs/_modules/: index.html  pta.html
docs/_sources/: index.rst.txt
docs/pta/: clock.html  clock.rst  distributions.html  examples.html  mdp.html  pta.html  pta.rst  region.html  region.rst
docs/pta_examples/: traffic_example.html  traffic_example.rst
docsrc/: bibliography.rst  conf.py  make.bat  modules.rst  pta.rst
docsrc/pta/: distributions.rst  examples.rst
html/: bibliography.html  objects.inv  pta.html  py-modindex.html  search.html
html/_modules/: index.html  pta.html
html/_sources/: pta.rst.txt  pta_examples.rst.txt
html/pta/: pta.html
html/pta_examples/: traffic_example.html
probabilistic_timed_automata/: region.py
pta/: __init__.py  alphabet.py  clock.html  clock.py  clocks.py  distributions.html  distributions.py  mdp.html  pta.html  pta.py  region.py  spaces.py  utils.py
pta/mdp/: __init__.py  digital_mdp.py  mdp.py  region_mdp.py
pta_examples/: traffic_example.py
pta_examples/task_graph/: __init__.py  basic.py  fault_processor.py  (+1 more)
tests/: test_probabilistic_timed_automata.py  test_region.py
(+16 files in other folders)
